# haf_grasping

./: CMakeLists.txt  LICENSE  README  package.xml
action/: CalcGraspPointsServer.action
config/: haf_grasping.rviz
data/: Features.txt  README.txt  objects_1.pcd  objects_2.pcd  objects_3.pcd  pcd1.pcd  pcd10.pcd  pcd11.pcd  pcd12.pcd  pcd2.pcd  pcd3.pcd  pcd4.pcd  pcd5.pcd  pcd6.pcd  pcd7.pcd  pcd8.pcd  pcd9.pcd  plastic_mug2.pcd  range21062012_allfeatures  table1_mult_obj_rcs_1428580506606673.pcd  table2_mult_obj_rcs_1428580941635676.pcd  table3_mult_obj_rcs_1428581033679923.pcd
include/: CHaarFeature.h  CIntImage_to_Featurevec.h
launch/: haf_grasping.launch  haf_grasping_all.launch  rviz.launch
msg/: GraspInput.msg  GraspOutput.msg
src/: CHaarFeature.cpp  CIntImage_to_Featurevec.cpp  calc_grasppoints.cpp  calc_grasppoints_action_client.cpp  calc_grasppoints_action_server.cpp
srv/: GraspApproachVector.srv  GraspCalculationTimeMax.srv  GraspPreGripperOpeningWidth.srv  GraspSearchCenter.srv  GraspSearchRectangleSize.srv  ShowOnlyBestGrasp.srv
